tetris walkthrough done

--- a/Tetris/.vscode/settings.json
+++ b/Tetris/.vscode/settings.json
@@ -54,6 +54,12 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"map": "cpp",
+		"charconv": "cpp",
+		"ctime": "cpp",
+		"format": "cpp",
+		"span": "cpp",
+		"variant": "cpp"
 	}
 }
